# astro-hackathon

./: .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: eca21b20fe63_initial_migration.py
api/: main.py  ws_manager.py
api/routers/: donki.py  ingest.py  orbital.py  predict.py  telemetry.py  ws.py
dashboard/: app.py
dashboard/components/: cone.py  gauge.py  heatmap.py  timeseries.py
dashboard/pages/: 1_Yorunge_Kontrol.py
db/: database.py  models.py
models/: autoencoder.py  lora_config.py  solar_transformer.py  storm_gan.py  surya_adapter.py  surya_loader.py  train.py
pipeline/: cognitive_ldpc.py  normalizer.py  orbital_collision.py  predictor.py  terrestrial_impact.py
schemas/: prediction.py  telemetry.py
tests/: test_api.py  test_normalizer.py  test_schemas.py
workers/: ingest_daemon.py
