[project]
name = "solar-storm-warning"
version = "1.0.0"
description = "TUA Astro Hackathon 2026 — Solar Storm Early Warning Network"
requires-python = ">=3.11"
authors = [{ name = "Team AstroGuard" }]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
